# Retcon

./: .gitignore  AUDIT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dev_qwen_0_6b.yaml  production_qwen_4b_lora.yaml  production_qwen_4b_qlora.yaml  real_qwen_0_6b.yaml  real_qwen_0_6b_hf_download.yaml  smoke_qwen_0_6b.yaml  synthetic_qwen_0_6b.yaml  synthetic_qwen_0_6b_partial_unfreeze.yaml  synthetic_qwen_0_6b_replay.yaml
configs/accelerate/: cpu.yaml  multi_gpu.yaml  single_gpu.yaml
configs/sweeps/: smoke_lora_rank.yaml
cplab/: __init__.py  __main__.py  cli.py
cplab/config/: __init__.py  defaults.py  io.py  schemas.py
cplab/dashboard/: app.py
cplab/data/: __init__.py  clean.py  contamination.py  dataset.py  dedup.py  ingest.py  manifests.py  scrape.py  tokenize.py
cplab/deployment/: __init__.py  doctor.py
cplab/eval/: __init__.py  baseline.py  checkpoint.py  comparison_protocol.py  (+6 more)
docs/: config_schema.md  dashboard.md  data_format.md  deployment.md  evaluation.md  reproducibility.md  training.md
examples/: smoke_domain.md
scripts/: validate_configs.py
tests/: test_baseline_eval.py  test_checkpoint_eval.py  test_clean_dedup.py  test_cli.py  test_config_validation.py  test_controlled_forgetting.py  test_deployment_doctor.py  test_eval_contamination.py  test_experiment_manifest.py  test_forgetting_detection.py  test_ingest.py  test_layer_metrics.py  test_lm_eval.py  test_packaging_docs.py  test_perplexity.py  test_reliability.py  test_reporting.py  test_run_store.py  test_sweep.py  test_tokenize.py  test_training.py
(+52 files in other folders)
